# desktop-webmail

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  desktop-webmail-config.desktop.in  desktop-webmail.desktop.in  desktop-webmail.xml  webmailers.ini  webservice-email.xml
po/: POTFILES.in  de.po  hu.po  nl.po
src/: Makefile.am  desktop-webmail.c
