
EXTRA_DIST = \
	desktop-webmail.desktop.in \
	webmailers.ini \
	webservice-email.xml \
	desktop-webmail.svg \
	$(NULL)

pkgdata_DATA = \
	webmailers.ini \
	$(NULL)

defaultappsdir = ${datadir}/gnome-control-center/default-apps/
defaultapps_DATA = \
	webservice-email.xml \
	$(NULL)

scalableiconsdir = ${datadir}/icons/gnome/scalable/apps/
scalableicons_DATA = \
	desktop-webmail.svg \
	$(NULL)

